css/k2.css
/* @override 
	http://localhost/k2/wp-content/themes/k2/css/k2.css
	http://localhost/wp30/wp-content/themes/k2/css/k2.css
*/

/*
	Author				: K2 Team
	Author URI			: http://getk2.com/
	Style Name			: K2 Classic
	Style URI			: http://getk2.com/
	Version				: 1.1
	Description			: The classic Kubrick-inspired K2 design.
	Layout Widths		: 580px, 800px, 970px
	Content Width		: 500px
	Header Height		: 200px
	Header Text Color	: #ffffff
*/


/* Reset CSS v1.0 from http://meyerweb.com/eric/tools/css/reset/ */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	}


/* Basic Typography */

body {
    font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Helvetica, Arial, Sans-Serif;
	}

h1, .blog-title, h2, h3 {
	font-family: "Trebuchet MS", Verdana, Sans-Serif;
	}

h4, h5, h6 {
	font-family: Verdana, Sans-Serif;
	}


/* Page Structure */

body {
	font-size: 62.5%; /* Resets 1em to 10px */
	color: #444;
	background: #eee;
	text-align: center;
	}

body.lang-ar,
body.lang-fa,
body.lang-he,
body.lang-hi,
body.lang-km,
body.lang-ko,
body.lang-ja,
body.lang-th,
body.lang-zh {
	font-size: 75%; /* Resets 1em to 12px, for internationalized K2s */
	}

#page {
	background: #fff;
	}

#page {
	text-align: left;
	margin: 0 auto;
	padding-top: 20px;
	position: relative;
	border: 1px solid #ddd;
	border-top: none;
	clear: both;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	-moz-border-radius-bottomleft: 5px;
	-moz-border-radius-bottomright: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
	}

.columns-one #page,
.columns-one.smartposition #rollingarchivesbg {
	width: 560px;
	}

.columns-two #page,
.columns-two.smartposition #rollingarchivesbg {
	width: 780px;
	}

.columns-three #page,
.columns-three.smartposition #rollingarchivesbg {
	width: 950px;
	}

#header {
	position: relative;
	height: 200px;
	background: #3371A3;
	background-position: top right;
	background-repeat: no-repeat;
	}

.wrapper {
	padding: 0 20px 0px;
	}

.columns-two .secondary {
	float: right;
	}

#primary {
	position: relative;
	float: left;
	width: 520px;
	padding: 10px 0;
	}

body.showrollingarchives #primary { /* Flush RA with header */
	padding-top: 0;
}

body.home.onepageonly.rollingarchives #primary { /* No RA, so back to 10px */
	padding-top: 10px;
}


* html #primary { /* IE Hack */
	display: inline;
	}

#primary {
	margin-top: 9px;
	}

.columns-one .secondary {
	width: 240px;
	border-top: 1px solid #eee;
	}

.columns-three .secondary {
	width: 175px;
	}

.secondary {
	width: 200px;
	float: left;
	font-size: 1em;
	line-height: 1.5em;
	color: #666;
	padding: 0 10px;
	overflow: hidden;
	padding-bottom: 20px;
}

#widgets-sidebar-2 {
	clear: right;
	}

.comments {
	clear: both;
	text-align: left;
	margin: 30px 0 0;
	position: relative;
	}


/* Main Menu in Header */

.headermenu {
	position: absolute;
	white-space: nowrap;
	bottom: 0;
	margin: 0 20px;
	}

.headermenu > ul {
	float: left;
	}

.headermenu li {
	list-style: none;
	}

.headermenu li a {
	display: block;
	outline: none;
	}

.headermenu li a:hover {
	text-decoration: none;
	}

.headermenu > ul > li { /* Top Menu Items */
	float: left;
	}

.headermenu > ul > li > a { /* Top Menu */
	margin-left: 5px;
	padding: 5px 15px;
	color: #fff;

	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
	-moz-border-radius-topleft: 3px;
	-moz-border-radius-topright: 3px;
	-webkit-border-top-left-radius: 3px;
	-webkit-border-top-right-radius: 3px;
	}

.headermenu > ul > li.current_page_ancestor > a,
.headermenu > ul > li.current_page_item > a {
	color: #333;
	background: #fff;
	}

.headermenu > ul > li:hover > a,
.headermenu > ul > li.sfHover > a { /* Top level hover*/
	color: #eee;
	background-color: #333;
	}

.headermenu > ul > li.has_children > a { /* Top level parent */
	padding-right: 18px;
	position: relative;
	}

.headermenu > ul > li.current_page_ancestor.has_children > a:after,
.headermenu > ul > li.current_page_item.has_children > a:after {
	background: url('../images/arrows.png') no-repeat left top;
	}

.headermenu > ul > li.has_children:hover > a:after,
.headermenu > ul > li.has_children.sfHover > a:after,
.headermenu > ul > li.has_children > a:after { /* Dropdown indicators */
	position: absolute;
	right: 5px;
	top: 10px;
	height: 4px;
	width: 7px;
	content: '';
	background: url('../images/arrows.png') no-repeat left bottom;
	}

.headermenu > ul > li > ul { /* Child Menus */
	left: -999em;
	position: absolute;
	z-index: 50;
	max-width: 20em;
	margin-left: 5px;

	-moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
	
	background: #f3f3f3;
	border-radius: 0 3px 3px 3px;
	-moz-border-radius: 0 3px 3px 3px;
	-webkit-border-top-right-radius: 3px;
	-webkit-border-radius: 3px;
	-webkit-border-top-left-radius: 0;
	}

.headermenu > ul > li.sfHover > ul,
.headermenu > ul > li:hover > ul { /* Show submenu when hovering parent */
	left: inherit;
	}

.headermenu li li a { /* Submenu links */
	color: #333;
	padding: .6em 1.5em;
	overflow: hidden;
	text-overflow: ellipsis;
	}

.headermenu li li a:hover { /* Child hover */
	background: #ddd;
	background: rgba(0, 0, 0, .1); /* To accomodate the gradient background in modern browsers */
	}

.headermenu li li li a { /* Indent 3rd child */
	padding-left: 2em;
}

.headermenu > ul > li > ul > li:first-child > a { /* First child 2nd level */
	border-radius: 0 3px 0 0;
	-moz-border-radius: 0 3px 0 0;
	-webkit-border-top-left-radius: 0;
	-webkit-border-top-right-radius: 3px;
	}
/* ... */

